Update url in config

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ email: 'mdecke@bgsu.edu'
 affiliation: 'Department of Computer Science, Bowling Green State University'
 office_building: 'Hayes Hall'
 office_room: '242'
-url: 'mjdecker.github.io'
+url: 'mdecker.net'
 homepage: 'mjdecker.github.io'
 description: > # this means to ignore newlines until 'baseurl:'
   Website for Michael J. Decker, Ph.D.
