--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -59,6 +59,10 @@ jobs:
 
   # Deployment job
   deploy:
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -67,4 +71,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
