--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -59,7 +59,6 @@ jobs:
 
   # Deployment job
   deploy:
-    needs: build
     permissions:
       pages: write
       id-token: write
@@ -71,4 +70,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v4g
