--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -59,7 +59,7 @@ jobs:
 
   # Deployment job
   deploy:
-    permissions:
+g    permissions:
       pages: write
       id-token: write
     environment:
@@ -70,4 +70,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4g
+        uses: actions/deploy-pages@v4
